--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-helpers": "^6.24.1",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
