--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.5.0",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
